<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_login"
    tools:context=".GuestSesion.LoginActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_search_location"
        android:src="@drawable/icon_back_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:contentDescription="@string/description"
                android:src="@mipmap/utalca_logo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_gravity="center"
                android:layout_marginTop="-30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="U-EVENTS"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:shadowColor="@color/mapboxGrayLight"
                android:text="@string/haveAccount"
                android:textColor="@color/fifth"
                android:textColorLink="#2196F3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerRoute"
                android:shadowColor="@color/mapboxGrayLight"
                android:text="@string/register"
                android:textColor="@color/second"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_correoinstitucional"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Correo"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperText="Ingrese su correo institucional"
                app:startIconDrawable="@drawable/custom_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correosesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_contrasenia"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contraseña"
                app:helperTextTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxBackgroundMode="outline"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperText="Ingrese su contraseña"
                app:startIconDrawable="@drawable/custom_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passsesion"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/button3"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="authroute"
                android:text="@string/iniciarSesion"
                app:strokeColor="@color/haveAccount" />

            <TextView
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="recuperarContrasenia"
                android:shadowColor="@color/black"
                android:text="@string/forgot"
                android:textColor="@color/fifth"
                android:textColorHighlight="@color/mapboxBlue" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>